--- a/LIT.Smabu/Infrastructure/LIT.Smabu.Infrastructure.csproj
+++ b/LIT.Smabu/Infrastructure/LIT.Smabu.Infrastructure.csproj
@@ -8,6 +8,7 @@
 
   <ItemGroup>
     <PackageReference Include="MediatR" Version="12.1.1" />
+    <PackageReference Include="Microsoft.AspNetCore.Http.Abstractions" Version="2.2.0" />
     <PackageReference Include="Newtonsoft.Json" Version="13.0.1" />
   </ItemGroup>
 
