Customer vorbereitet; neu strukturiert;

--- a/LIT.Smabu/Server/LIT.Smabu.Server.csproj
+++ b/LIT.Smabu/Server/LIT.Smabu.Server.csproj
@@ -17,6 +17,7 @@
   <ItemGroup>
     <ProjectReference Include="..\Client\LIT.Smabu.Client.csproj" />
     <ProjectReference Include="..\Infrastructure\LIT.Smabu.Infrastructure.csproj" />
+    <ProjectReference Include="..\Services\LIT.Smabu.Service.csproj" />
     <ProjectReference Include="..\Shared\LIT.Smabu.Shared.csproj" />
   </ItemGroup>
 
