--- a/LIT.Smabu/Server/LIT.Smabu.Server.csproj
+++ b/LIT.Smabu/Server/LIT.Smabu.Server.csproj
@@ -9,9 +9,17 @@
   </PropertyGroup>
 
   <ItemGroup>
+    <Compile Remove="TmpData\**" />
+    <Content Remove="TmpData\**" />
+    <EmbeddedResource Remove="TmpData\**" />
+    <None Remove="TmpData\**" />
+  </ItemGroup>
+
+  <ItemGroup>
     <PackageReference Include="MediatR" Version="12.1.1" />
     <PackageReference Include="Microsoft.AspNetCore.Components.WebAssembly.Server" Version="7.0.10" />
     <PackageReference Include="Microsoft.Identity.Web.MicrosoftGraph" Version="2.13.1" />
+    <PackageReference Include="System.IdentityModel.Tokens.Jwt" Version="6.32.3" />
   </ItemGroup>
 
   <ItemGroup>
