--- a/LIT.Smabu/Shared.Domain/LIT.Smabu.Shared.Domain.csproj
+++ b/LIT.Smabu/Shared.Domain/LIT.Smabu.Shared.Domain.csproj
@@ -6,4 +6,9 @@
     <Nullable>enable</Nullable>
   </PropertyGroup>
 
+  <ItemGroup>
+    <Folder Include="InvoiceAggregate\Commands\" />
+    <Folder Include="InvoiceAggregate\Queries\" />
+  </ItemGroup>
+
 </Project>
