Commands und queries separiert

--- a/LIT.Smabu/InfrastructureTests/LIT.Smabu.InfrastructureTests.csproj
+++ b/LIT.Smabu/InfrastructureTests/LIT.Smabu.InfrastructureTests.csproj
@@ -18,7 +18,7 @@
 
   <ItemGroup>
     <ProjectReference Include="..\Infrastructure\LIT.Smabu.Infrastructure.csproj" />
-    <ProjectReference Include="..\Shared.Domain\LIT.Smabu.Shared.Domain.csproj" />
+    <ProjectReference Include="..\Shared.Domain\LIT.Smabu.Domain.Shared.csproj" />
   </ItemGroup>
 
 </Project>
