--- a/LIT.Smabu/Services/LIT.Smabu.Business.Service.csproj
+++ b/LIT.Smabu/Services/LIT.Smabu.Business.Service.csproj
@@ -8,7 +8,7 @@
 
   <ItemGroup>
     <ProjectReference Include="..\Infrastructure\LIT.Smabu.Infrastructure.csproj" />
-    <ProjectReference Include="..\Shared.Domain\LIT.Smabu.Shared.Domain.csproj" />
+    <ProjectReference Include="..\Shared.Domain\LIT.Smabu.Domain.Shared.csproj" />
     <ProjectReference Include="..\Shared\LIT.Smabu.Shared.csproj" />
   </ItemGroup>
 
