--- a/LIT.Smabu/Shared.Domain/LIT.Smabu.Domain.Shared.csproj
+++ b/LIT.Smabu/Shared.Domain/LIT.Smabu.Domain.Shared.csproj
@@ -11,4 +11,8 @@
     <Folder Include="Invoices\Queries\" />
   </ItemGroup>
 
+  <ItemGroup>
+    <PackageReference Include="MediatR" Version="12.1.1" />
+  </ItemGroup>
+
 </Project>
