--- a/LIT.Smabu/Shared.DomainTests/LIT.Smabu.Shared.DomainTests.csproj
+++ b/LIT.Smabu/Shared.DomainTests/LIT.Smabu.Shared.DomainTests.csproj
@@ -21,7 +21,7 @@
   </ItemGroup>
 
   <ItemGroup>
-    <ProjectReference Include="..\Shared.Domain\LIT.Smabu.Shared.Domain.csproj" />
+    <ProjectReference Include="..\Shared.Domain\LIT.Smabu.Domain.Shared.csproj" />
   </ItemGroup>
 
 </Project>
