--- a/LIT.Smabu/Shared/LIT.Smabu.Shared.csproj
+++ b/LIT.Smabu/Shared/LIT.Smabu.Shared.csproj
@@ -7,7 +7,7 @@
   </PropertyGroup>
 
   <ItemGroup>
-    <ProjectReference Include="..\Shared.Domain\LIT.Smabu.Shared.Domain.csproj" />
+    <ProjectReference Include="..\Shared.Domain\LIT.Smabu.Domain.Shared.csproj" />
   </ItemGroup>
 
   <ItemGroup>
