CurrentUser added; FileAggregateStore load-handling modified;  ValueObject as Record; Tests added;

--- a/LIT.Smabu/Infrastructure/LIT.Smabu.Infrastructure.csproj
+++ b/LIT.Smabu/Infrastructure/LIT.Smabu.Infrastructure.csproj
@@ -14,6 +14,7 @@
 
   <ItemGroup>
     <ProjectReference Include="..\Shared.Domain\LIT.Smabu.Domain.Shared.csproj" />
+    <ProjectReference Include="..\Shared\LIT.Smabu.Shared.csproj" />
   </ItemGroup>
 
 </Project>
