--- a/LIT.Smabu/Shared/LIT.Smabu.Shared.csproj
+++ b/LIT.Smabu/Shared/LIT.Smabu.Shared.csproj
@@ -13,4 +13,8 @@
   <ItemGroup>
     <SupportedPlatform Include="browser" />
   </ItemGroup>
+
+  <ItemGroup>
+    <Folder Include="Common\" />
+  </ItemGroup>
 </Project>
