--- a/LIT.Smabu/Client/LIT.Smabu.Client.csproj
+++ b/LIT.Smabu/Client/LIT.Smabu.Client.csproj
@@ -17,6 +17,7 @@
   </ItemGroup>
 
   <ItemGroup>
+    <ProjectReference Include="..\Shared.Domain\LIT.Smabu.Domain.Shared.csproj" />
     <ProjectReference Include="..\Shared\LIT.Smabu.Shared.csproj" />
   </ItemGroup>
 
