--- a/LIT.Smabu/Infrastructure/LIT.Smabu.Infrastructure.csproj
+++ b/LIT.Smabu/Infrastructure/LIT.Smabu.Infrastructure.csproj
@@ -9,6 +9,7 @@
   <ItemGroup>
     <PackageReference Include="MediatR" Version="12.1.1" />
     <PackageReference Include="Microsoft.AspNetCore.Http.Abstractions" Version="2.2.0" />
+    <PackageReference Include="Microsoft.Extensions.Logging.Abstractions" Version="7.0.1" />
     <PackageReference Include="Newtonsoft.Json" Version="13.0.1" />
   </ItemGroup>
 
@@ -20,6 +21,7 @@
 
   <ItemGroup>
     <Folder Include="CQRS\" />
+    <Folder Include="Mapping\" />
   </ItemGroup>
 
 </Project>
