--- a/LIT.Smabu/Services/LIT.Smabu.Business.Service.csproj
+++ b/LIT.Smabu/Services/LIT.Smabu.Business.Service.csproj
@@ -7,6 +7,12 @@
   </PropertyGroup>
 
   <ItemGroup>
+    <Compile Remove="Invoices - Kopieren\**" />
+    <EmbeddedResource Remove="Invoices - Kopieren\**" />
+    <None Remove="Invoices - Kopieren\**" />
+  </ItemGroup>
+
+  <ItemGroup>
     <PackageReference Include="MediatR" Version="12.1.1" />
     <PackageReference Include="Microsoft.Extensions.Logging.Abstractions" Version="7.0.1" />
   </ItemGroup>
