--- a/src/LIT.Smabu.Web/LIT.Smabu.Web.csproj
+++ b/src/LIT.Smabu.Web/LIT.Smabu.Web.csproj
@@ -14,6 +14,7 @@
     <PackageReference Include="LibSassBuilder" Version="3.0.0" />
     <PackageReference Include="Microsoft.VisualStudio.Azure.Containers.Tools.Targets" Version="1.19.6" />
     <PackageReference Include="Microsoft.VisualStudio.Web.CodeGeneration.Design" Version="8.0.1" />
+    <PackageReference Include="QuestPDF" Version="2023.12.6" />
   </ItemGroup>
 
   <ItemGroup>
