--- a/src/LIT.Smabu.Infrastructure/LIT.Smabu.Infrastructure.csproj
+++ b/src/LIT.Smabu.Infrastructure/LIT.Smabu.Infrastructure.csproj
@@ -15,6 +15,7 @@
   <ItemGroup>
     <PackageReference Include="MediatR" Version="12.2.0" />
     <PackageReference Include="Microsoft.AspNetCore.Http.Abstractions" Version="2.2.0" />
+    <PackageReference Include="Microsoft.Azure.Cosmos" Version="3.38.1" />
     <PackageReference Include="Microsoft.EntityFrameworkCore" Version="8.0.3" />
     <PackageReference Include="Microsoft.EntityFrameworkCore.Design" Version="8.0.3">
       <PrivateAssets>all</PrivateAssets>
@@ -35,6 +36,7 @@
   <ItemGroup>
     <ProjectReference Include="..\LIT.Smabu.Domain\LIT.Smabu.Domain.csproj" />
     <ProjectReference Include="..\LIT.Smabu.Shared\LIT.Smabu.Shared.csproj" />
+    <ProjectReference Include="..\LIT.Smabu.UseCases\LIT.Smabu.UseCases.csproj" />
   </ItemGroup>
 
 </Project>
