--- a/src/LIT.Smabu.Web/LIT.Smabu.Web.csproj
+++ b/src/LIT.Smabu.Web/LIT.Smabu.Web.csproj
@@ -10,6 +10,10 @@
   
   <ItemGroup>
     <PackageReference Include="LibSassBuilder" Version="3.0.0" />
+    <PackageReference Include="Microsoft.AspNetCore.Authentication.MicrosoftAccount" Version="8.0.5" />
+    <PackageReference Include="Microsoft.Identity.Web.Diagnostics" Version="2.18.2" />
+    <PackageReference Include="Microsoft.Identity.Web.DownstreamApi" Version="2.18.2" />
+    <PackageReference Include="Microsoft.Identity.Web.UI" Version="2.18.2" />
     <PackageReference Include="Microsoft.VisualStudio.Azure.Containers.Tools.Targets" Version="1.19.6" />
     <PackageReference Include="Microsoft.VisualStudio.Web.CodeGeneration.Design" Version="8.0.2" />
     <PackageReference Include="QuestPDF" Version="2023.12.6" />
