--- a/src/LIT.Smabu.Domain/LIT.Smabu.Domain.csproj
+++ b/src/LIT.Smabu.Domain/LIT.Smabu.Domain.csproj
@@ -10,4 +10,8 @@
     <ProjectReference Include="..\LIT.Smabu.Shared\LIT.Smabu.Shared.csproj" />
   </ItemGroup>
 
+  <ItemGroup>
+    <Folder Include="UseCases\" />
+  </ItemGroup>
+
 </Project>
