Restructuring and cleanup

--- a/src/LIT.Smabu.Domain/LIT.Smabu.Domain.csproj
+++ b/src/LIT.Smabu.Domain/LIT.Smabu.Domain.csproj
@@ -7,11 +7,7 @@
   </PropertyGroup>
 
   <ItemGroup>
-    <ProjectReference Include="..\LIT.Smabu.Shared\LIT.Smabu.Shared.csproj" />
-  </ItemGroup>
-
-  <ItemGroup>
-    <Folder Include="UseCases\" />
+    <PackageReference Include="Microsoft.Extensions.DependencyInjection.Abstractions" Version="8.0.1" />
   </ItemGroup>
 
 </Project>
