API added; React added;

--- a/src/LIT.Smabu.API/appsettings.Development.json
+++ b/src/LIT.Smabu.API/appsettings.Development.json
@@ -4,5 +4,23 @@
       "Default": "Information",
       "Microsoft.AspNetCore": "Warning"
     }
+  },
+  "Authentication": {
+    "DefaultScheme": "LocalAuthIssuer",
+    "Schemes": {
+      "Bearer": {
+        "ValidAudiences": [
+          "http://localhost:5035"
+        ],
+        "ValidIssuer": "dotnet-user-jwts"
+      },
+      "LocalAuthIssuer": {
+        "ValidAudiences": [
+          "https://localhost:5035",
+          "http://localhost:5035"
+        ],
+        "ValidIssuer": "local-auth"
+      }
+    }
   }
 }
