--- a/src/lit.smabu.react/package.json
+++ b/src/lit.smabu.react/package.json
@@ -15,6 +15,7 @@
     "@emotion/react": "^11.13.3",
     "@emotion/styled": "^11.13.0",
     "@mui/icons-material": "^6.0.2",
+    "@mui/lab": "^6.0.0-beta.9",
     "@mui/material": "^6.0.2",
     "axios": "^1.7.7",
     "react": "^18.3.1",
@@ -24,6 +25,7 @@
   },
   "devDependencies": {
     "@eslint/js": "^9.9.0",
+    "@types/node": "^22.5.4",
     "@types/react": "^18.3.3",
     "@types/react-dom": "^18.3.0",
     "@vitejs/plugin-react": "^4.3.1",
