--- a/.github/workflows/dotnet.yml
+++ b/.github/workflows/dotnet.yml
@@ -11,7 +11,8 @@ on:
 
 jobs:
   build:
-
+    if: "!contains(github.event.head_commit.message, 'React') && !contains(github.event.head_commit.message, 'package.json')"
+    
     runs-on: ubuntu-latest
 
     steps:
