--- a/.github/workflows/dotnet.yml
+++ b/.github/workflows/dotnet.yml
@@ -5,8 +5,12 @@ name: .NET
 
 on:
   push:
+    paths-ignore:
+       - '**/lit.smabu.react/**'
     branches: [ "dev" ]
   pull_request:
+    paths-ignore:
+       - '**/lit.smabu.react/**'
     branches: [ "dev" ]
 
 jobs:
@@ -21,7 +25,6 @@ jobs:
         dotnet-version: 8.0.x
     - name: Restore dependencies
       run: dotnet restore
-      if: "!contains(github.event.head_commit.message, 'React') && !contains(github.event.head_commit.message, 'package.json')"
     - name: Build
       run: dotnet build --no-restore
     - name: Test
