--- a/src/LIT.Smabu.UseCases/LIT.Smabu.UseCases.csproj
+++ b/src/LIT.Smabu.UseCases/LIT.Smabu.UseCases.csproj
@@ -9,6 +9,7 @@
   <ItemGroup>
     <PackageReference Include="MediatR" Version="12.2.0" />
     <PackageReference Include="Newtonsoft.Json" Version="13.0.3" />
+    <PackageReference Include="QuestPDF" Version="2024.10.1" />
   </ItemGroup>
 
   <ItemGroup>
