--- a/src/lit.smabu.react/package.json
+++ b/src/lit.smabu.react/package.json
@@ -17,6 +17,7 @@
     "@mui/icons-material": "^6.1.4",
     "@mui/lab": "^6.0.0-beta.9",
     "@mui/material": "^6.1.4",
+    "@mui/x-charts": "^7.21.0",
     "axios": "^1.7.7",
     "react": "^18.3.1",
     "react-dom": "^18.3.1",
