Added Order-Backend with OrderDetails-UI

--- a/src/LIT.Smabu.Domain/LIT.Smabu.Domain.csproj
+++ b/src/LIT.Smabu.Domain/LIT.Smabu.Domain.csproj
@@ -14,4 +14,8 @@
     <ProjectReference Include="..\LIT.Smabu.Shared\LIT.Smabu.Shared.csproj" />
   </ItemGroup>
 
+  <ItemGroup>
+    <Folder Include="InvoiceAggregate\Events\" />
+  </ItemGroup>
+
 </Project>
