--- a/src/LIT.Smabu.UseCases/LIT.Smabu.UseCases.csproj
+++ b/src/LIT.Smabu.UseCases/LIT.Smabu.UseCases.csproj
@@ -21,10 +21,9 @@
 
   <ItemGroup>
     <Folder Include="Catalogs\AddGroup\" />
-    <Folder Include="Catalogs\AddGroupItem\" />
     <Folder Include="Catalogs\GetGroup\" />
     <Folder Include="Catalogs\GetGroupItem\" />
-    <Folder Include="Catalogs\RemoveGroupItem\" />
+    <Folder Include="Catalogs\RemoveItem\" />
     <Folder Include="Catalogs\UpdateGroup\" />
     <Folder Include="Catalogs\RemoveGroup\" />
   </ItemGroup>
