--- a/src/LIT.Smabu.Domain/LIT.Smabu.Domain.csproj
+++ b/src/LIT.Smabu.Domain/LIT.Smabu.Domain.csproj
@@ -25,5 +25,11 @@
   <ItemGroup>
     <Folder Include="InvoiceAggregate\Events\" />
   </ItemGroup>
+  
+  <ItemGroup>
+    <AssemblyAttribute Include="System.Runtime.CompilerServices.InternalsVisibleTo">
+      <_Parameter1>$(MSBuildProjectName)Tests</_Parameter1>
+    </AssemblyAttribute>
+  </ItemGroup>
 
 </Project>
