Add payment feature

--- a/src/LIT.Smabu.Domain/LIT.Smabu.Domain.csproj
+++ b/src/LIT.Smabu.Domain/LIT.Smabu.Domain.csproj
@@ -23,6 +23,7 @@
   </ItemGroup>
 
   <ItemGroup>
+    <Folder Include="CustomerAggregate\Specifications\" />
     <Folder Include="InvoiceAggregate\Events\" />
   </ItemGroup>
   
